--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,88 @@
-gunicorn
-django
-django-leaflet
-djangorestframework
-django-heroku
-geopandas
-psycopg2
+appnope==0.1.0
+asgiref==3.2.3
+astroid==2.3.3
+attrs==19.3.0
+backcall==0.2.0
+bleach==3.1.5
+click==7.1.1
+click-plugins==1.1.1
+cligj==0.5.0
+cmake==3.17.3
+decorator==4.4.2
+defusedxml==0.6.0
+dj-database-url==0.5.0
+Django==3.0.2
+django-heroku==0.3.1
+django-leaflet==0.26.0
+dlib==19.20.0
+entrypoints==0.3
+Fiona==1.8.13.post1
+Flask==1.1.2
+geopandas==0.7.0
+gunicorn==20.0.4
+imutils==0.5.3
+ipykernel==5.3.0
+ipython==7.15.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+isort==4.3.21
+itsdangerous==1.1.0
+jedi==0.17.0
+Jinja2==2.11.2
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.3
+jupyter-console==6.1.0
+jupyter-core==4.6.3
+labelImg==1.8.3
+lazy-object-proxy==1.4.3
+lxml==4.5.1
+MarkupSafe==1.1.1
+mccabe==0.6.1
+mistune==0.8.4
+munch==2.5.0
+nbconvert==5.6.1
+nbformat==5.0.7
+notebook==6.0.3
+numpy==1.18.5
+opencv-python==4.2.0.34
+packaging==20.4
+pandas==1.0.4
+pandocfilters==1.4.2
+parso==0.7.0
+pexpect==4.8.0
+pickleshare==0.7.5
+prometheus-client==0.8.0
+prompt-toolkit==3.0.5
+psycopg2==2.8.5
+psycopg2-binary==2.8.4
+ptyprocess==0.6.0
+Pygments==2.6.1
+pylint==2.4.4
+pyparsing==2.4.7
+pyproj==2.6.1.post1
+PyQt5==5.15.0
+PyQt5-sip==12.8.0
+pyrsistent==0.16.0
+pyshp==2.1.0
+python-dateutil==2.8.1
+python-dotenv==0.14.0
+pytz==2019.3
+pyzmq==19.0.1
+qtconsole==4.7.4
+QtPy==1.9.0
+Send2Trash==1.5.0
+Shapely==1.7.0
+six==1.13.0
+sqlparse==0.3.0
+terminado==0.8.3
+testpath==0.4.4
+tornado==6.0.4
+traitlets==4.3.3
+virtualenv==16.7.7
+wcwidth==0.2.4
+webencodings==0.5.1
+Werkzeug==1.0.1
+whitenoise==5.2.0
+widgetsnbextension==3.5.1
+wrapt==1.11.2
